[chore] 상단 header html+css 구조 변경 #9

--- a/client/index.html
+++ b/client/index.html
@@ -14,276 +14,280 @@
 </head>
 
 <body>
-  <section class="popup_wrap">
-    <div class="popup container">
-      <a href="#" class="popup_text">지금 가입하고 인기상품 <b>100원</b>에 받아가세요!</a>
-      <button class="popup_close_btn">
-        <img class="popup_close_img" src="./assets/icons/Icon/close_btn.png" alt="상단 배너를 닫을수 있는 X표시의 버튼" />
-      </button>
-    </div>
-  </section>
+  <header class="header_wrap">
+    <section class="popup_wrap">
+      <div class="popup container">
+        <a class="popup_text" href="#">지금 가입하고 인기상품 <b>100원</b>에 받아가세요!</a>
+        <button class="popup_btn">
+          <img class="popup_img" src="./assets/icons/Icon/close_btn.png" alt="상단 배너를 닫을수 있는 X표시의 버튼" />
+        </button>
+      </div>
+    </section>
 
-  <section class="top_btn container">
-    <ul class="top_btn_list">
-      <li class="btn_register">
-        <a href="#">회원가입</a>
-      </li>
+    <section class="topbtn_wrap container">
+      <ul class="topbtn_list">
+        <li class="topbtn_register">
+          <a href="#">회원가입</a>
+        </li>
+  
+        <span class="top_bar">|</span>
+  
+        <li class="topbtn_login">
+          <a href="#">로그인</a>
+        </li>
+  
+        <span class="top_bar">|</span>
+  
+        <li class="topbtn_cs">
+          <a href="#">
+            고객센터
+            <img src="./assets/icons/Icon/arrow_bottom.png" alt="하위 메뉴를 알리는 아래방향 화살표"/>
+          </a>
+          <ul class="cs_list">
+            <li>
+              <a href="#">
+                공지사항
+              </a>
+            </li>
+  
+            <li>
+              <a href="#">
+                자주하는 질문
+              </a>
+            </li>
+  
+            <li>
+              <a href="#">
+                1:1 문의
+              </a>
+            </li>
+  
+            <li>
+              <a href="#">
+                대량주문
+              </a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </section>
 
-      <div class="top_bar"></div>
+    <section class="headContent_wrap container">
+      <article class="logo_wrap">
+        <h1>
+          <a href="#">
+            <img class="logo_img" src="./assets/icons/Icon/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
+          </a>
+        </h1>
+        <a class="market_part is_active" href="#">마켓컬리</a>
+        <span class="logo_bar">|</span>
+        <a class="beauty_part" href="#">뷰티컬리</a>
+      </article>
 
-      <li class="btn_login">
-        <a href="#">로그인</a>
-      </li>
+      <article class="search_wrap">
+        <form method="POST">
+          <fieldset>
+            <legend>검색</legend>
+            <div class="searchForm_group">
+              <div class="search_form">
+                <label for="search" class="a11yHidden">검색어</label>
+                <input id="search" class="search_input" type="search" required placeholder="검색어를 입력해주세요" name="search"/>
+              </div>
+              <button class="search_btn" type="submit"></button>
+            </div>
+          </fieldset>
+        </form>
+      </article>
 
-      <div class="top_bar second"></div>
+      <article class="icon_wrap">
+        <a class="icon_location" href="#"></a>
+        <a class="icon_heart" href="#"></a>
+        <a class="icon_cart" href="#"></a>
+      </article>
+    </section>
 
-      <li class="btn_cs">
+    <nav class="category_wrap container">
+      <section class="category">
         <a href="#">
-          고객센터
-          <img src="./assets/icons/Icon/arrow_bottom.png" alt=""/>
+          <div class="burger_wrap">
+            <span class="burger"></span>
+            <span class="burger"></span>
+            <span class="burger"></span>
+          </div>
+          카테고리
         </a>
-        <ul class="cs_list">
+        <ul>
           <li>
             <a href="#">
-              공지사항
+              <img src="./assets/icons/category/gift.png" alt="" />
+              <span>선물하기</span>
             </a>
           </li>
-
+          
           <li>
             <a href="#">
-              자주하는 질문
+              <img src="./assets/icons/category/vegetable.png" alt="" />
+              <span>채소</span>
             </a>
           </li>
-
+  
           <li>
             <a href="#">
-              1:1 문의
+              <img src="./assets/icons/category/fruit.png" alt="" />
+              <span>과일 · 견과 · 쌀</span>
             </a>
           </li>
-
+  
           <li>
             <a href="#">
-              대량주문
+              <img src="./assets/icons/category/seaFood.png" alt="" />
+              <span>수산 · 해산 · 건어물</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/meet.png" alt="" />
+              <span>정육 · 계란</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/cook.png" alt="" />
+              <span>국 · 반찬 · 메인요리</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/salad.png" alt="" />
+              <span>샐러드 · 간편식</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/spice.png" alt="" />
+              <span>면 · 양념 · 오일</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/coffee.png" alt="" />
+              <span>생수 · 음료 · 우유 · 커피</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/snack.png" alt="" />
+              <span>간식 · 과자 · 떡</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/bakery.png" alt="" />
+              <span>베이커리 · 치즈 · 델리</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/health.png" alt="" />
+              <span>건강식품</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/wine.png" alt="" />
+              <span>와인</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/traditionalLiquor.png" alt="" />
+              <span>전통주</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/detergent.png" alt="" />
+              <span>생활용품 · 리빙 · 캠핑</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/skincare.png" alt="" />
+              <span>스킨케어 · 메이크업</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/shampoo.png" alt="" />
+              <span>헤어 · 바디 · 구강</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/kitchen.png" alt="" />
+              <span>주방용품</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/wash.png" alt="" />
+              <span>가전제품</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/animal.png" alt="" />
+              <span>반려동물</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/baby.png" alt="" />
+              <span>베이비 · 키즈 · 완구</span>
+            </a>
+          </li>
+  
+          <li>
+            <a href="#">
+              <img src="./assets/icons/category/travel.png" alt="" />
+              <span>여행 · 티켓</span>
             </a>
           </li>
         </ul>
-      </li>
-    </ul>
-  </section>
-
-  <header class="header_wrap container">
-    <section class="logo_wrap">
-      <a href="#">
-        <img src="./assets/icons/Icon/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
-      </a>
-      <a class="market_part is_active" href="#">마켓컬리</a>
-      <div class="logo_bar"></div>
-      <a class="beauty_part" href="#">뷰티컬리</a>
-    </section>
-
-    <section class="search">
-      <form method="POST">
-        <fieldset>
-          <legend>검색</legend>
-          <div class="searchForm_group">
-            <div class="formInput">
-              <label for="search" class="a11yHidden">검색어</label>
-              <input id="search" class="formInput_input" type="search" required placeholder="검색어를 입력해주세요" name="search"/>
-            </div>
-            <button class="search_btn" type="submit"></button>
-          </div>
-        </fieldset>
-      </form>
-    </section>
-
-    <section class="icon">
-      <button class="icon_location"></button>
-      <button class="icon_heart"></button>
-      <button class="icon_cart"></button>
-    </section>
+      </section>
+  
+      <div class="keyworld">
+        <a href="#">신상품</a>
+        <a href="#">베스트</a>
+        <a href="#">알뜰쇼핑</a>
+        <a href="#">특가/헤택</a>
+      </div>
+  
+      <div class="delivery">
+        <a href="#">
+          <span>샛별·낮</span>
+          배송안내
+        </a>
+      </div>
+    </nav>
   </header>
-
-  <section class="category_wrap container">
-    <article class="category">
-      <a href="#">
-        <div class="burger_wrap">
-          <span class="burger"></span>
-          <span class="burger"></span>
-          <span class="burger"></span>
-        </div>
-        카테고리
-      </a>
-      <ul>
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/gift.png" alt="" />
-            <span>선물하기</span>
-          </a>
-        </li>
-        
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/vegetable.png" alt="" />
-            <span>채소</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/fruit.png" alt="" />
-            <span>과일 · 견과 · 쌀</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/seaFood.png" alt="" />
-            <span>수산 · 해산 · 건어물</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/meet.png" alt="" />
-            <span>정육 · 계란</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/cook.png" alt="" />
-            <span>국 · 반찬 · 메인요리</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/salad.png" alt="" />
-            <span>샐러드 · 간편식</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/spice.png" alt="" />
-            <span>면 · 양념 · 오일</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/coffee.png" alt="" />
-            <span>생수 · 음료 · 우유 · 커피</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/snack.png" alt="" />
-            <span>간식 · 과자 · 떡</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/bakery.png" alt="" />
-            <span>베이커리 · 치즈 · 델리</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/health.png" alt="" />
-            <span>건강식품</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/wine.png" alt="" />
-            <span>와인</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/traditionalLiquor.png" alt="" />
-            <span>전통주</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/detergent.png" alt="" />
-            <span>생활용품 · 리빙 · 캠핑</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/skincare.png" alt="" />
-            <span>스킨케어 · 메이크업</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/shampoo.png" alt="" />
-            <span>헤어 · 바디 · 구강</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/kitchen.png" alt="" />
-            <span>주방용품</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/wash.png" alt="" />
-            <span>가전제품</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/animal.png" alt="" />
-            <span>반려동물</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/baby.png" alt="" />
-            <span>베이비 · 키즈 · 완구</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/travel.png" alt="" />
-            <span>여행 · 티켓</span>
-          </a>
-        </li>
-      </ul>
-    </article>
-
-    <article class="keyworld">
-      <a href="#">신상품</a>
-      <a href="#">베스트</a>
-      <a href="#">알뜰쇼핑</a>
-      <a href="#">특가/헤택</a>
-    </article>
-
-    <article class="delivery">
-      <a href="#">
-        <span>샛별·낮</span>
-        배송안내
-      </a>
-    </article>
-  </section>
 
   <footer class="container">
     <section class="consumer_wrap">
