[chore] 상세정보에 대한 이미지 html + css #30

--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -439,7 +439,16 @@
     </article>
   </section>
 
-  
+  <section class="detail_information">
+    <article class="detail_information_img">
+      <img src="assets/tangtang/detail_info.jpg">
+    </article>
+    
+    <article class="why_karly">
+
+    </article>
+  </section>
+
 </body>
 </html>
 
