[chore] 장바구니 css 마크업 #20

--- a/client/cart.html
+++ b/client/cart.html
@@ -464,7 +464,9 @@
             <h3 class="title">배송지</h3>
             <p class="address">서울 중랑구 면목로 42길 11 (행운빌딩) 603호</p>
             <p class="deliver">샛별배송</p>
-            <button class="change_address">배송지 변경</button>
+            <button class="change_address">
+              <span class="btn_text">배송지 변경</span>
+            </button>
           </div>
 
           <div class="price_box">
@@ -496,7 +498,7 @@
 
           <button class="order_btn">주문하기</button>
 
-          <ul>
+          <ul class="notice">
             <li>쿠폰/적립금은 주문서에서 사용 가능합니다.</li>
             <li>[주문완료] 상태일 경우에만 주문 취소 가능합니다.</li>
             <li>
