[chore] 상품문의 테이블 마크업 완료 #22

--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -454,14 +454,53 @@
     </div>
     <div class="prev-next-btn">
       <button class="prev">prev</button>
-      <button class="next">next</button>
+      <button class="next"></button>
     </div>
 
   </div>
 
   <!--상품 문의  -->
+  <div class="product-review-wrapper">
+    <section class="product-review-header">
+      <h2 class="product-review-title">
+        상품문의
+      </h2>
+      <button class="write-btn">
+        문의하기
+      </button>
+      <ul class="review-benefit">
+        <span class="review-benefit-title"></span>
+        <li>상품에 대한 문의를 남기는 공간입니다. 해당 게시판의 성격과 다른 글은 사전동의 없이 담당 게시판으로 이동될 수 있습니다.</li>
+        <li>배송관련, 주문(취소/교환/환불)관련 문의 및 요청사항은 마이컬리 내 1:1 문의에 남겨주세요.</li>
+      </ul>
+    </section>
+    <table class="inquiry-table">
+      <thead>
+        <tr>
+          <th class="title">제목</th>
+          <th class="author">작성자</th>
+          <th class="created-date">작성일</th>
+          <th class="status">답변상태</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td></td>
+          <td>칼리</td>
+          <td>2017.02.01</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>팩이 터져서 왔어요</td>
+          <td>김*식</td>
+          <td>2022.11.11</td>
+          <td>답변대기</td>
+        </tr>
+      </tbody>
+    </table>          
 
-
+  </div>
+  
   <!-- 푸 터 -->
   <footer class="container">
     <section class="consumer_wrap">
