--- a/client/index.html
+++ b/client/index.html
@@ -285,21 +285,21 @@
     </article>
   </section>
 
-  <main>
-    <!-- main banner -->
-    <section>
-      <div class="swiper_main_banner">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner05.png" alt="이 주의 특가 한 눈에 보기 배너" /></a></div>
-          <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner01.png" alt="칼리 과일 가게 배너" /></a></div>
-          <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner03.png" alt="칼리 퍼플 위크 배너" /></a></div>
-          <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner02.png" alt="이 달의 카드 혜택 배너" /></a></div>
-        </div>
-        <div class="swiper-button-prev main_banner_prev"></div>
-        <div class="swiper-button-next main_banner_next"></div>
+  <!-- main banner -->
+  <section>
+    <div class="swiper_main_banner">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner05.png" alt="이 주의 특가 한 눈에 보기 배너" /></a></div>
+        <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner01.png" alt="칼리 과일 가게 배너" /></a></div>
+        <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner03.png" alt="칼리 퍼플 위크 배너" /></a></div>
+        <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner02.png" alt="이 달의 카드 혜택 배너" /></a></div>
       </div>
-    </section>
-
+      <div class="swiper-button-prev main_banner_prev"></div>
+      <div class="swiper-button-next main_banner_next"></div>
+    </div>
+  </section>
+  
+  <main class="page_main">
     <!-- 오늘의 상품 추천 -->
     <section class="today_recommend_products">
       <h2 class="a11yHidden">오늘의 상품 추천</h2>
@@ -458,6 +458,20 @@
       <span class="sub_banner_title a11yHidden">더 풍성해진 10월의 퍼플위크</span>
       <span class="sub_banner_text a11yHidden">적립률 UP + 3종 쿠폰팩</span>
     </div>
+
+    <!-- 할인 상품 추천 -->
+
+    <!-- 최근 본 상품 -->
+    <section class="recent_products_container">
+      <h2 class="recent_products_title">최근 본 상품</h2>
+      <ul class="recent_products_list">
+        <li class="recent_product">product1</li>
+        <li class="recent_product">product2</li>
+        <li class="recent_product">product3</li>
+      </ul>
+      <button type="button" class="recent_products_prev"></button>
+      <button type="button" class="recent_products_next"></button>
+    </section>
   </main>
 
 
