[style] 상품문의 테이블 비밀글 스타일 지정  #22

--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -485,7 +485,10 @@
       </thead>
       <tbody>
         <tr>
-          <td></td>
+          <td><span class="notice-badge">
+            공지
+          </span>
+          <button class="notice-title">판매(일시)중단 제품 안내(22.11.10 업데이트)</button></td>
           <td>칼리</td>
           <td>2017.02.01</td>
           <td>-</td>
@@ -496,11 +499,33 @@
           <td>2022.11.11</td>
           <td>답변대기</td>
         </tr>
+        <tr>
+          <td class="is-secret">비밀글입니다. <img src="./assets/icons/Icon/Lock.svg" alt="" /></td>
+          <td>김*범</td>
+          <td>2022.09.13</td>
+          <td class="is-answered">답변완료</td>
+        </tr>
+        <tr>
+          <td class="is-secret">비밀글입니다. <img src="./assets/icons/Icon/Lock.svg" alt="" /></td>
+          <td>김*범</td>
+          <td>2022.09.13</td>
+          <td class="is-answered">답변완료</td>
+        </tr>
+        <tr>
+          <td class="is-secret">비밀글입니다. <img src="./assets/icons/Icon/Lock.svg" alt="" /></td>
+          <td>김*범</td>
+          <td>2022.09.13</td>
+          <td class="is-answered">답변완료</td>
+        </tr>
+
       </tbody>
     </table>          
-
+   <div class="prev-next-btn">
+      <button class="prev">prev</button>
+      <button class="next">next</button>
+   </div>
   </div>
-  
+
   <!-- 푸 터 -->
   <footer class="container">
     <section class="consumer_wrap">
