[chore] 뷰티 칼리 popup 마크업 #32

--- a/client/index.html
+++ b/client/index.html
@@ -474,6 +474,15 @@
     </section>
   </main>
 
+  <!-- pop_up -->
+  <div class="popup_container">
+    <a href="/" class="popup_beauty">
+      <p class="a11yHidden">처음 만나는 뷰티 플랫폼</p>
+      <p class="a11yHidden">지금 바로 만나보세요!</p>
+    </a>
+    <button type="button" class="close_popup_for_day">오늘 하루 안 보기</button>
+    <button type="button" class="close_popup">닫기</button>
+  </div>
 
 
   <footer class="container">
