[chore] 회원가입 초기 셋팅

--- a/client/register.html
+++ b/client/register.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/register.css" />
   <link rel="stylesheet" href="./css/common.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./js/main.js" type="module"></script>
-  <title>마켓칼리</title>
+  <title>회원가입</title>
 </head>
 
 <body>
@@ -288,6 +288,12 @@
       </div>
     </nav>
   </header>
+
+  <section class="register_wrap">
+    <article class="register_box">
+
+    </article>
+  </section>
 
   <footer class="footer_wrap">
     <section class="information_wrap container">
