[chore] 회원가입 초기 셋팅

--- a/client/register.html
+++ b/client/register.html
@@ -291,7 +291,12 @@
 
   <section class="register_wrap">
     <article class="register_box">
+      <h3>회원가입</h3>
+      <span>필수입력사항</span>
 
+      <div class="register">
+
+      </div>
     </article>
   </section>
 
