--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <!-- 창환님 코드 영역 -->
   <section class="popup_wrap">
     <div class="popup container">
       <a href="#" class="popup_text">지금 가입하고 인기상품 <b>100원</b>에 받아가세요!</a>
@@ -286,6 +287,7 @@
     </article>
   </section>
 
+  <!-- 나의 코드 영역 시작 -->
   <main class="productDetail_main">
     <img class="product_image" src="assets/tangtang/detail_view.jpg">
 
@@ -443,17 +445,58 @@
     <article class="detail_information_img">
       <img src="assets/tangtang/detail_info.jpg">
     </article>
-    
     <article class="why_karly">
-
+      <div class="why_karly_title">WHY KARLY</div>
+      <div class="why_karly_contents">
+        <div>
+          <dl class="why_karly_content1">
+            <dt>
+              깐깐한 상품위원회
+            </dt>
+            <dd>
+              나와 내 가족이 먹고 쓸 상품을 고르는<br>마음으로 매주 상품을 직접 먹어보고,<br>경험해보고 성분, 맛 안정성 등 다각도의<br>기준을 통과한 상품만을 판매합니다.
+            </dd>
+          </dl>
+          <dl class="why_karly_content2">
+            <dt>
+              차별화된 Karly Only 상품
+            </dt>
+            <dd>
+              전국 각지와 해외의 훌륭한 생산자가<br>믿고 선택하는 파트너, 마켓칼리.<br>3천여 개가 넘는 칼리 단독 브랜드, 스펙의<br>Karly Only 상품을 믿고 만나보세요.
+            </dd>
+          </dl>
+          <dl class="why_karly_content3">
+            <dt>
+              신선한 풀콜드체인 배송
+            </dt>
+            <dd>
+              온라인 업계 최초로 산지에서 문 앞까지<br>상온, 냉장, 냉동 상품을 분리 포장 후<br>최적의 온도를 유지하는 냉장 배송 시스템,<br>풀콜드체인으로 상품을 신선하게 전해드립니다.
+            </dd>
+          </dl>
+        </div>
+        <div>
+          <dl class="why_karly_content4">
+            <dt>
+              고객, 생산자를 위한 최선의 가격
+            </dt>
+            <dd>
+              매주 대형 마트와 주요 온라인 마트의 가격<br>변동 상황을 확인해 신선식품은 품질을<br>타협하지 않는 선에서 최선의 가격으로,<br>가공식품은 언제나 합리적인 가격으로<br>정기 조정합니다.
+            </dd>
+          </dl>
+          <dl class="why_karly_content5">
+            <dt>
+              환경을 생각하는 지속 가능한 유통
+            </dt>
+            <dd>
+              친환경 포장재부터 생산자가 상품에만<br>집중할 수 있는 직매입 유통구조까지,<br>지속 가능한 유통을 고민하며 컬리를 있게<br>하는 모든 환경(생산자,커뮤니티,직원)이<br>더 나아질 수 있도록 노력합니다.
+            </dd>
+          </dl>
+        </div>
+      </div>
     </article>
   </section>
 
-</body>
-</html>
-
-
-
+<!-- 창환님 코드 영역-->
   <footer class="container">
     <section class="consumer_wrap">
       <div class="consumer">
@@ -599,10 +642,5 @@
     <p class="copyright_text">© KURLY CORP. ALL RIGHTS RESERVED</p>
   </section>
 
-  
-
-
-  
-  
 </body>
 </html>
