[style] 페이지 이동 화살표 디자인 완성  #22

--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -457,8 +457,8 @@
       </div>
     </div>
     <div class="prev-next-btn">
-      <button class="prev">prev</button>
-      <button class="next"></button>
+      <button class="bg-arrow_prev" aria-label="previous_page"></button>
+      <button class="bg-arrow_next" aria-label="next_page"></button>
     </div>
 
   </div>
@@ -524,10 +524,10 @@
 
       </tbody>
     </table>          
-   <div class="prev-next-btn">
-      <button class="prev">prev</button>
-      <button class="next">next</button>
-   </div>
+    <div class="prev-next-btn">
+      <button class="bg-arrow_prev" aria-label="previous_page"></button>
+      <button class="bg-arrow_next" aria-label="next_page"></button>
+    </div>
   </div>
 
   <!-- 푸터 -->
