--- a/client/index.html
+++ b/client/index.html
@@ -289,187 +289,6 @@
     </nav>
   </header>
 
-  <section class="category_wrap container">
-    <article class="category">
-      <a href="#">
-        <div class="burger_wrap">
-          <span class="burger"></span>
-          <span class="burger"></span>
-          <span class="burger"></span>
-        </div>
-        카테고리
-      </a>
-      <ul>
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/gift.png" alt="" />
-            <span>선물하기</span>
-          </a>
-        </li>
-        
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/vegetable.png" alt="" />
-            <span>채소</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/fruit.png" alt="" />
-            <span>과일 · 견과 · 쌀</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/seaFood.png" alt="" />
-            <span>수산 · 해산 · 건어물</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/meet.png" alt="" />
-            <span>정육 · 계란</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/cook.png" alt="" />
-            <span>국 · 반찬 · 메인요리</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/salad.png" alt="" />
-            <span>샐러드 · 간편식</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/spice.png" alt="" />
-            <span>면 · 양념 · 오일</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/coffee.png" alt="" />
-            <span>생수 · 음료 · 우유 · 커피</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/snack.png" alt="" />
-            <span>간식 · 과자 · 떡</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/bakery.png" alt="" />
-            <span>베이커리 · 치즈 · 델리</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/health.png" alt="" />
-            <span>건강식품</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/wine.png" alt="" />
-            <span>와인</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/traditionalLiquor.png" alt="" />
-            <span>전통주</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/detergent.png" alt="" />
-            <span>생활용품 · 리빙 · 캠핑</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/skincare.png" alt="" />
-            <span>스킨케어 · 메이크업</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/shampoo.png" alt="" />
-            <span>헤어 · 바디 · 구강</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/kitchen.png" alt="" />
-            <span>주방용품</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/wash.png" alt="" />
-            <span>가전제품</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/animal.png" alt="" />
-            <span>반려동물</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/baby.png" alt="" />
-            <span>베이비 · 키즈 · 완구</span>
-          </a>
-        </li>
-
-        <li>
-          <a href="#">
-            <img src="./assets/icons/category/travel.png" alt="" />
-            <span>여행 · 티켓</span>
-          </a>
-        </li>
-      </ul>
-    </article>
-
-    <article class="keyworld">
-      <a href="#">신상품</a>
-      <a href="#">베스트</a>
-      <a href="#">알뜰쇼핑</a>
-      <a href="#">특가/헤택</a>
-    </article>
-
-    <article class="delivery">
-      <a href="#">
-        <span>샛별·낮</span>
-        배송안내
-      </a>
-    </article>
-  </section>
 
   <!-- main banner -->
   <section>
@@ -500,7 +319,7 @@
                 </div>
                 <div class="product_info">
                   <div class="product_name">[풀무원] 탱탱쫄면 (4개입)</div>
-                  <div class="product_price">4,980 원</div>
+                  <span class="product_price">4,980 원</span>
                 </div>
               </a>
             </div>
@@ -511,7 +330,7 @@
                 </div>
                 <div class="product_info">
                   <div class="product_name">[온더바디] 죠르디 시카 자석 선쿠션</div>
-                  <div class="product_price">32,500 원</div>
+                  <span class="product_price">32,500 원</span>
                 </div>
               </a>
             </div>
@@ -522,7 +341,7 @@
                 </div>
                 <div class="product_info">
                   <div class="product_name">유기농 밀키퀸 현미 4kg</div>
-                  <div class="product_price">25,000 원</div>
+                  <span class="product_price">32,500 원</span>
                 </div>
               </a>
             </div>
@@ -531,11 +350,11 @@
                 <div class="product_img_container">
                   <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
                 </div>
-                <div class="product_info">
+                <div class="product_info_sale">
                   <div class="product_name">[프로쉬] 베이비 세탁세</div>
                   <span class="sale_rate">24%</span>
                   <span class="product_price">18,900 원</span>
-                  <div class="cost">24,000 원</div>
+                  <div class="product_cost">24,000 원</div>
                 </div>
               </a>
             </div>
@@ -631,7 +450,6 @@
                 </div>
               </a>
             </div>
-            
           </div>
         </div>
         <div class="swiper-button-prev recommend_products_prev"></div>
